# smart_farm

Gestion-equipements-agricoles/Gestion equipements agricoles/project13/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonctions.c  fonctions.h  interface.c  interface.c.bak  interface.h.bak  liste_des_equipements_agricoles.txt  main.c  project13
Gestion-equipements-agricoles/Gestion equipements agricoles/project13/src/.deps/: callbacks.Po  fonctions.Po
Gestion-equipements-agricoles/marquedeff/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  marquedeff.glade.bak  marquedeff.gladep
Gestion-equipements-agricoles/marquedeff/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c.bak  liste_des_capteurs.txt  main.c  marquedeff  temp.txt
Gestion-equipements-agricoles/marquedeff/src/.deps/: fonction.Po
gestionclient/Tauxabs/: Makefile  Makefile.am  Makefile.in  absenteisme.txt  config.h  config.status  configure  configure.in  tauxabs.glade.bak  tauxabs.gladep.bak
gestionclient/gestionclient/: Makefile  Makefile.am  Makefile.in  clients.txt  config.h  config.status  configure  configure.in  gestionclient.glade  gestionclient.gladep.bak
gestionplantes/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project9000.glade  project9000.gladep
gestionplantes/autom4te.cache/: output.0  requests  traces.0  traces.1
gestionplantes/po/: Makefile  Makefile.in
gestionplantes/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  plante.c  plante.h  plantes.txt  project9000
gestionplantes/src/.deps/: callbacks.Po  plante.Po
projet_ouvrier/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projetouv.glade.bak  projetouv.gladep.bak  projettv.glade  projettv.gladep
projet_ouvrier/autom4te.cache/: output.0  requests  traces.0  traces.1
projet_ouvrier/po/: Makefile  Makefile.in
projet_ouvrier/src/: Makefile  Makefile.am  Makefile.in  abs.txt  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  ouvrier.c  ouvrier.h  ouvrier.txt  projettv
raed_capteur/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  raed_capteur.glade  raed_capteur.gladep.bak
raed_capteur/autom4te.cache/: output.0  requests  traces.0  (+1 more)
raed_capteur/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  cap.txt  capteur_raed.c  capteur_raed.h  humidite.txt  interface.c  interface.c.bak  main.c  raed_capteur
raed_capteur/src/.deps/: callbacks.Po
troupeaux/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  troupeaux.glade.bak  troupeaux.gladep
troupeaux/nbre_troupeaux/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  liste_troupeaux.txt  nbre_troupeaux  nbre_troupeaux.c  nbre_troupeaux.h
troupeaux/nbre_troupeaux/src/.deps/: callbacks.Po  nbre_troupeaux.Po
(+104 files in other folders)
